service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
  ports:
    - port: 8080
      nodePort: 30307
      name: tomcat
  selector:
    app: tomcat
  type: NodePort
